--- a/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -2,7 +2,11 @@
 @inherits EmployeeListBase
 
 <h3>Employee List</h3>
-
+@if(Employees == null)
+{
+<div class="spinner"></div> }
+            else
+            {
 <div class="card-deck">
     @foreach(var employee in Employees)
     {
@@ -19,4 +23,4 @@
         <a href="#" class="btn btn-primary m-1">Delete</a>
     </div>
 </div>}
-</div>
+</div>}
