Added Blazor route parameters

--- a/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -5,8 +5,8 @@
 @if(Employees == null)
 {
 <div class="spinner"></div> }
-            else
-            {
+else
+{
 <div class="card-deck">
     @foreach(var employee in Employees)
     {
@@ -16,7 +16,7 @@
     </div>
     <img class="card-img-top imageThumbnail" src="@employee.PhotoPath" />
     <div class="card-footer text-center">
-        <a href="#" class="btn btn-primary m-1">View</a>
+        <a href="@($"employeedetails/{employee.EmployeeId}")" class="btn btn-primary m-1">View</a>
 
         <a href="#" class="btn btn-primary m-1">Edit</a>
 
