--- a/Blazor/EmployeeManagement.Web/Pages/EmployeeDetails.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EmployeeDetails.razor
@@ -2,6 +2,11 @@
 @page "/employeedetails"
 @inherits EmployeeDetailsBase
 
+@if(Employee == null)
+{
+<div class="spinner"></div> }
+else
+{
 <div class="row justify-content-center m-3">
     <div class="col-sm-8">
         <div class="card">
@@ -14,7 +19,7 @@
 
                 <h4>Employee Id : @Employee.EmployeeId</h4>
                 <h4>Email : @Employee.Email</h4>
-                <h4>Department : @Employee.DepartmentId</h4>
+                <h4>Department : @(Employee.Department == null ? "N/A" : Employee.Department.DepartmentName)</h4>
             </div>
             <div class="card-footer text-center">
                 <a href="/" class="btn btn-primary">Back</a>
@@ -23,4 +28,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>}
