--- a/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inherits EmployeeListBase
 
-<h3>Employee List</h3>
+<h3>Selected Employee Count - @SelectedEmployeesCount</h3>
 <input type="checkbox" id="showFooter" @bind="ShowFooter" />
 <label for="showFooter">Show Footer</label>
 @if(Employees == null)
@@ -12,5 +12,6 @@ else
 <div class="card-deck">
     @foreach(var employee in Employees)
     {
-<DisplayEmployee Employee="employee" ShowFooter="ShowFooter"></DisplayEmployee>}
+<DisplayEmployee Employee="employee" ShowFooter="ShowFooter"
+                 OnEmployeeSelection="EmployeeSelectionChanged"></DisplayEmployee>}
 </div>}
