Binding select element with database in blazor (dropdown)

--- a/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -10,7 +10,7 @@
             First Name
         </label>
         <div class="col-sm-10">
-            <InputText id="firstName" class="from-control" placeholder="First Name"
+            <InputText id="firstName" class="form-control" placeholder="First Name"
                        @bind-Value="Employee.FirstName" />
         </div>
     </div>
@@ -19,17 +19,29 @@
             Last Name
         </label>
         <div class="col-sm-10">
-            <InputText id="lastName" class="from-control" placeholder="Last Name"
+            <InputText id="lastName" class="form-control" placeholder="Last Name"
                        @bind-Value="Employee.LastName" />
         </div>
     </div>
     <div class="from-group row">
-        <label for="firstName" class="col-sm-2 col-form-label">
+        <label for="email" class="col-sm-2 col-form-label">
             Email
         </label>
         <div class="col-sm-10">
-            <InputText id="email" class="from-control" placeholder="Email"
+            <InputText id="email" class="form-control" placeholder="Email"
                        @bind-Value="Employee.Email" />
+        </div>
+    </div>
+    <div class="from-group row">
+        <label for="department" class="col-sm-2 col-form-label">
+            Department
+        </label>
+        <div class="col-sm-10">
+            <InputSelect id="department" @bind-Value="DepartmentId" class="form-control">
+                @foreach(var dept in Departments)
+                {
+<option value="@dept.DepartmentId">@dept.DepartmentName</option>}
+            </InputSelect>
         </div>
     </div>
 </EditForm>
