bind input select element to in blazor

--- a/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -44,4 +44,16 @@
             </CustomInputSelect>
         </div>
     </div>
+    <div class="from-group row">
+        <label for="gender" class="col-sm-2 col-form-label">
+            Gender
+        </label>
+        <div class="col-sm-10">
+            <InputSelect id="department" @bind-Value="Employee.Gender" class="form-control">
+                @foreach(var gender in Enum.GetValues( typeof( Gender ) ))
+                {
+<option value="@gender">@gender</option>}
+            </InputSelect>
+        </div>
+    </div>
 </EditForm>
