--- a/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -14,6 +14,7 @@
                        @bind-Value="Employee.FirstName" />
         </div>
     </div>
+    <hr />
     <div class="from-group row">
         <label for="firstName" class="col-sm-2 col-form-label">
             Last Name
@@ -23,6 +24,7 @@
                        @bind-Value="Employee.LastName" />
         </div>
     </div>
+    <hr />
     <div class="from-group row">
         <label for="email" class="col-sm-2 col-form-label">
             Email
@@ -32,6 +34,7 @@
                        @bind-Value="Employee.Email" />
         </div>
     </div>
+    <hr />
     <div class="from-group row">
         <label for="department" class="col-sm-2 col-form-label">
             Department
@@ -44,6 +47,7 @@
             </CustomInputSelect>
         </div>
     </div>
+    <hr />
     <div class="from-group row">
         <label for="gender" class="col-sm-2 col-form-label">
             Gender
@@ -54,6 +58,15 @@
                 {
 <option value="@gender">@gender</option>}
             </InputSelect>
+        </div>
+    </div>
+    <hr />
+    <div class="from-group row">
+        <label for="dateOfBirth" class="col-sm-2 col-form-label">
+            Date Of Birth
+        </label>
+        <div class="col-sm-10">
+            <InputDate @bind-Value="Employee.DateOfBirth" class="form-control" />
         </div>
     </div>
 </EditForm>
