--- a/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/Blazor/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -3,8 +3,10 @@
 @inherits EditEmployeeBase
 
 <EditForm Model="@Employee">
+    <DataAnnotationsValidator />
     <h3>Edit Employee</h3>
     <hr />
+    <ValidationSummary />
     <div class="from-group row">
         <label for="firstName" class="col-sm-2 col-form-label">
             First Name
@@ -12,6 +14,7 @@
         <div class="col-sm-10">
             <InputText id="firstName" class="form-control" placeholder="First Name"
                        @bind-Value="Employee.FirstName" />
+            <ValidationMessage For="@(() => Employee.FirstName)" />
         </div>
     </div>
     <hr />
@@ -22,6 +25,7 @@
         <div class="col-sm-10">
             <InputText id="lastName" class="form-control" placeholder="Last Name"
                        @bind-Value="Employee.LastName" />
+            <ValidationMessage For="@(() => Employee.LastName)" />
         </div>
     </div>
     <hr />
@@ -32,6 +36,7 @@
         <div class="col-sm-10">
             <InputText id="email" class="form-control" placeholder="Email"
                        @bind-Value="Employee.Email" />
+            <ValidationMessage For="@(() => Employee.Email)" />
         </div>
     </div>
     <hr />
